--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 #input1 {
-    width: 500px;
+    width: 415px;
     height: 25px;
     border-style: solid;
     border-width: 2px;
@@ -55,10 +55,24 @@ body {
     height: 300px;
     background-color: white;
     margin-top: 10px;
+    margin-bottom: 10px;
     color: black;
     font-size: 20px;
     font-family: arial;
     overflow-x: hidden;
     overflow-y: auto;
     scrollbar-width: none;
+}
+
+#deletebutton {
+    width: 80px;
+    height: 30px;
+    border-style: solid;
+    background-color: red;
+    border-color: red;
+    font-size: 20px;
+    color: white;
+}
+#deletebutton:active{
+    background-color:rgb(252, 98, 95)
 }
