--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 #input1 {
-    width: 415px;
+    width: 330px;
     height: 25px;
     border-style: solid;
     border-width: 2px;
@@ -57,7 +57,7 @@ body {
     margin-top: 10px;
     margin-bottom: 10px;
     color: black;
-    font-size: 15px;
+    font-size: 17px;
     font-family: arial;
     overflow-x: hidden;
     overflow-y: auto;
@@ -76,4 +76,18 @@ body {
 
 #deletebutton:active {
     background-color: rgb(252, 98, 95)
+}
+
+#searchButton {
+    width: 80px;
+    height: 30px;
+    border-style: solid;
+    background-color: rgb(2, 255, 0);
+    border-color: rgb(2, 255, 0);
+    font-size: 20px;
+    color: white;
+}
+
+#searchButton:active {
+    background-color: rgb(130, 247, 130);
 }
